# wandrer

./: .gitignore  README.md  eslint.config.ts  global.d.ts  next.config.ts  package.json  tsconfig.json
data/: .gitignore  pyproject.toml
data/scratch/: map-matching.py
data/scratch/testdata/: track1.fit  track2.fit  track3.fit
eslint/: airbnb.ts  global.d.ts  import.ts  index.ts  jsx-stylistic.ts  next.ts  package.json  react.ts  tsconfig.json
eslint/airbnb/: best-practices.ts  errors.ts  es6.ts  index.ts  stylistic.ts  variables.ts
eslint/airbnb/generator/: index.ts
services/wandrer-data-viewer/: eslint.config.ts  next.config.ts  package.json  tsconfig.json
services/wandrer-data-viewer/src/app/: page.module.scss
services/wandrer-data-viewer/src/app/api/: wandrer-session.ts
services/wandrer-data-viewer/src/app/api/tile-data/: route.ts
services/wandrer-data-viewer/src/components/: Map.module.scss  Map.tsx
services/wandrer-data-viewer/src/data/: noop-template-tag.ts  spatial-index.ts  wandrer-tile-data.ts
services/wandrer-data-viewer/src/styles/: global.scss
src/: constants.ts
src/app/: data.ts  layout.tsx  page.tsx
src/app/api/: redis.ts  wandrer-session.ts
src/app/api/tile_data/: route.ts
src/app/api/tiles/traveled/[z]/[x]/[y]/: route.ts
src/app/api/tiles/untraveled/[z]/[x]/[y]/: route.ts
src/components/: Controls.module.scss  Controls.tsx  Map.tsx
src/data/: duckdb.ts  mapbox-util.ts  spatial-index.ts  wandrer-tile-data.ts
src/styles/: global.scss  reset.scss
(+2 files in other folders)
