[project]
name = "wandrer-data"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fitparse>=1.2.0",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "osmnx>=2.0.4",
    "pandas>=2.3.0",
    "pyproj>=3.7.1",
    "shapely>=2.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
]
